--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.1",
+    "@ngx-translate/core": "^11.0.1",
+    "bootstrap": "^4.2.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "angular-in-memory-web-api": "^0.8.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.800.0",
