--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.2.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
+    "toastr": "^2.1.4",
     "zone.js": "~0.9.1",
     "angular-in-memory-web-api": "^0.8.0"
   },
